# tflm-hello-world

./: .gitignore  CMakeLists.txt  main.cpp  model.h  setup.sh  test.cpp
